SqlType now uses sealed classes